<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/black_middle"
    tools:context=".AboutActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
        <ImageButton
            android:id="@+id/btn_back_about"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_back"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"/>
    </LinearLayout>
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:scrollbars="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:typeface="serif"
                android:layout_height="wrap_content"
                android:text="@string/guanajuato_splash"
                android:textAlignment="center"
                android:textSize="35dp"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textStyle="bold"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_app"
                android:textSize="13dp"
                android:typeface="serif"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:gravity="center"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/developed"
                android:typeface="serif"
                android:textSize="16dp"
                android:layout_marginTop="20dp"
                android:textColor="@color/white"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/career"
                android:typeface="serif"
                android:textSize="14dp"
                android:layout_marginTop="15dp"
                android:textColor="@color/white"
                android:gravity="center"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/credits"
                android:gravity="center"
                android:typeface="serif"
                android:textSize="13dp"
                android:layout_marginTop="50dp"
                android:textColor="@color/white"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/utng"
                android:typeface="serif"
                android:layout_marginTop="10dp"
                android:textColor="@color/white"
                android:textSize="14dp"
                android:gravity="center"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="70dp"
                android:gravity="bottom|center"
                android:layout_alignParentBottom="true"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/version"
                    android:gravity="center"
                    android:typeface="serif"
                    android:textSize="16dp"
                    android:textColor="@color/white"/>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>


</LinearLayout>