<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/city"
    tools:context=".NewAccountActivity"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="15dp"
        android:paddingBottom="15dp">
        <ImageButton
            android:id="@+id/btn_back_new_account"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_back"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_user"
        android:background="@drawable/rounded_editext_form"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="35dp"
        android:id="@+id/edt_name_user"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/rounded_editext_form"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:id="@+id/edt_email"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/rounded_editext_form"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:inputType="textPassword"
        android:layout_marginTop="5dp"
        android:id="@+id/edt_password_new"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:hint="@string/confirm_password"
        android:background="@drawable/rounded_editext_form"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:inputType="textPassword"
        android:id="@+id/edt_confirm_password"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/register_user"
        android:textStyle="italic"
        android:background="@drawable/rounded_button_login"
        android:textSize="18dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:id="@+id/btn_register_user"/>

</LinearLayout>