<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    tools:context=".LoginActivity"
    android:background="@drawable/guanajuato">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_user"
        android:hint="@string/email"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_editext_form"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textEmailAddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edt_password"
        android:hint="@string/password"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:background="@drawable/rounded_editext_form"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:inputType="textPassword"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btn_enter"
        android:hint="@string/login_enter"
        android:textStyle="italic"
        android:textSize="20dp"
        android:layout_marginTop="15dp"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="30dp"
        android:background="@drawable/rounded_button_login"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/txt_new_count"
        android:text="@string/new_account"
        android:textColor="@color/pink"
        android:layout_marginTop="20dp"
        android:textSize="16dp"
        android:layout_marginRight="35dp"
        android:gravity="right"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom|right"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">
        <Button
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:background="@drawable/rounded_button_about"
            android:id="@+id/btn_about"
            android:textColorHint="@color/white"
            android:textSize="20dp"
            android:typeface="serif"
            android:hint="@string/about_login"
            android:layout_marginBottom="2dp"/>
    </LinearLayout>


</LinearLayout>