<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txt_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/textAppearanceMedium"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <Button
        android:id="@+id/btn_update"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_update"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_update"/>

    <Button
        android:id="@+id/btn_delete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btn_delete"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_delete"/>

    <Button
        android:id="@+id/btn_go"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:text="@string/btn_go"
        android:layout_marginLeft="10dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_go"/>
    </LinearLayout>
</LinearLayout>
