<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/city"
    tools:context=".TourismActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:paddingTop="15dp"
        android:orientation="horizontal"
        android:paddingBottom="15dp">
        <ImageButton
            android:id="@+id/btn_back_tourism"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:background="@drawable/ic_back"
            android:layout_marginLeft="15dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:layout_marginLeft="30dp"
            android:textStyle="bold"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:descendantFocusability="blocksDescendants">
            <Button
                android:id="@+id/btn_logout_tourism"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/ic_logout"
                android:layout_alignParentRight="true"
                android:layout_marginRight="15dp"/>
        </RelativeLayout>
    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/name_list_tourism"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textSize="30dp"
        android:layout_marginTop="20px"
        android:layout_marginBottom="20px"
        android:textAlignment="center"
        android:textAppearance="?android:attr/textAppearanceLarge"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/name_place"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:layout_marginRight="25dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:id="@+id/edt_name_place"
        android:background="@drawable/rounded_editext_form"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/description_place"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:background="@drawable/rounded_editext_form"
        android:id="@+id/edt_description_place"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/latitude"
        android:paddingTop="10dp"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:background="@drawable/rounded_editext_form"
        android:id="@+id/edt_latitude_place"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/longitude"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:textAlignment="center"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_marginRight="25dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="5dp"
        android:inputType="numberDecimal"
        android:id="@+id/edt_longitude_place"
        android:background="@drawable/rounded_editext_form"/>

    <ImageView
        android:layout_width="wrap_content"
        android:layout_marginRight="10dp"
        android:layout_marginLeft="10dp"
        android:layout_height="150dp"
        android:id="@+id/txt_name_photo"/>

    <Button
        android:id="@+id/btn_select_photo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/btn_select_photo"/>

    <Button
        android:id="@+id/btn_save_tourism"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/btn_save"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_verde"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@android:color/black"/>

    <ListView
        android:id="@+id/list_view_tourism"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:background="@drawable/rounded_list">

    </ListView>
</LinearLayout>