<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <TextView
        android:layout_width="wrap_content"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:layout_height="wrap_content"
        android:id="@+id/txt_name_pub_restaurant"
        android:textAppearance="?android:attr/textAppearanceMedium"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_update_pub_restaurant"
        android:textColorHint="@color/white"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_update"
        android:text="@string/btn_update"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btn_delete_pub_restaurant"
        android:background="@drawable/rounded_button_delete"
        android:layout_marginLeft="10dp"
        android:text="@string/btn_delete"
        android:textColor="@color/white"/>
    <Button
        android:id="@+id/btn_go_pub_restaurant"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:textColor="@color/white"
        android:background="@drawable/rounded_button_go"
        android:layout_marginLeft="10dp"
        android:text="@string/btn_go"/>
    </LinearLayout>
</LinearLayout>
